--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name : Set up Pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
-          version: 6.32.9
+          version: 9
+          run_install: false
 
       - name: Set up Node
         uses: actions/setup-node@v4
