--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Set file permissions
+        run: chmod -R a+rX ./dist
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
