--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,26 +25,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name : Set up Pnpm
-        uses: pnpm/action-setup@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
-          version: 9
-          run_install: false
+            version: 8
+            run_install: false
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+            echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
         with:
-          node-version: 20
-          cache: 'pnpm'
+              path: ${{ env.STORE_PATH }}
+              key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+              restore-keys: |
+                ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: pnpm install
 
       - name: Build
         run: pnpm build
-
-      - name: Set file permissions
-        run: chmod -R a+rX ./dist
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
