--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,6 +33,9 @@
       "@widgets/*": [
         "src/@widgets/*"
       ],
+      "@entities/*": [
+        "src/@entities/*"
+      ],
       "@shares/*": [
         "src/@shares/*"
       ]
