--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "classnames": "^2.5.1",
     "eslint": "^9.9.0",
@@ -31,6 +32,7 @@
     "sass": "^1.79.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
+    "uuid": "^10.0.0",
     "vite": "^5.4.1",
     "zustand": "5.0.0-rc.2"
   }
